[gd_scene load_steps=6 format=2]

[ext_resource path="res://sprites/electric_stuff.png" type="Texture" id=1]
[ext_resource path="res://scripts/entity/electric_charge.gd" type="Script" id=2]
[ext_resource path="res://other/color_swap.tres" type="Material" id=3]
[ext_resource path="res://other/bullet.tres" type="Material" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 1, 1.5 )

[node name="Area2D" type="Area2D" groups=["Bullet"]]
collision_layer = 32
collision_mask = 276
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 0.5 )
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( -0.5, 1 )
scale = Vector2( 0.75, 0.6 )

[node name="explosion" type="Particles2D" parent="."]
material = ExtResource( 3 )
emitting = false
amount = 20
lifetime = 0.4
one_shot = true
explosiveness = 1.0
process_material = ExtResource( 4 )

[node name="ElectricStuff" type="Sprite" parent="."]
material = ExtResource( 3 )
texture = ExtResource( 1 )
vframes = 2
frame = 1

[connection signal="body_entered" from="." to="." method="_on_Area2D_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
